Integrate DFaceCheck into ShadowStack
- Move DFaceSearch functionality to ShadowStack as /shadowstack/dfacecheck
- Add dfacecheck routes and functions to shadowstack/blueprint.py
- Create dfacecheck.html template with ShadowStack styling
- Create dfacecheck.js with updated API endpoints
- Update ShadowStack navigation to include DFace Check link
- Remove standalone dfacesearch blueprint from app.py
- All functionality now integrated under ShadowStack

--- a/shadowstack/templates/_shadowstack_navigation.html
+++ b/shadowstack/templates/_shadowstack_navigation.html
@@ -15,6 +15,7 @@
     <div class="nav-links">
       <a href="/shadowstack/" class="nav-link {% if current_page == 'home' %}active{% endif %}">Home</a>
       <a href="/shadowstack/check" class="nav-link {% if current_page == 'check' %}active{% endif %}">Check URL</a>
+      <a href="/shadowstack/dfacecheck" class="nav-link {% if current_page == 'dfacecheck' %}active{% endif %}">DFace Check</a>
       <a href="/shadowstack/dashboard" class="nav-link {% if current_page == 'data' %}active{% endif %}">Data</a>
       <a href="/shadowstack/action" class="nav-link {% if current_page == 'action' %}active{% endif %}">Take Action</a>
     </div>
