Add HumanGate link to navigation menus
- Add HumanGate link to homepage and about page navigation
- Positioned between Reports dropdown and tools (ShadowStack, BlackWire, PersonaForge)
- Makes the plugin page easily discoverable

--- a/templates/darkai_home.html
+++ b/templates/darkai_home.html
@@ -582,6 +582,7 @@
         <a href="/reports/vendor-intelligence-report">Vendor Intelligence Report</a>
       </div>
     </div>
+    <a href="/humangate">HumanGate</a>
     <a href="shadowstack">ShadowStack</a>
     <a href="blackwire">BlackWire</a>
     <a href="personaforge">PersonaForge</a>
