--- a/templates/about.html
+++ b/templates/about.html
@@ -726,7 +726,7 @@
 
   <div class="about-bottom">
     <div>
-      <img src="https://media.licdn.com/dms/image/v2/D5603AQFyJn6wTMoe2Q/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1702930175808?e=1765411200&v=beta&t=dY6DzgcBXnKTSLKEC1pdlQG0YhmmNNVsjiqCPiOn6Vo" alt="Profile" class="about-image" loading="lazy">
+      <img src="/static/profile.jpeg" alt="Profile" class="about-image" loading="lazy">
     </div>
 
     <div class="contact-form-container" id="contact">
