--- a/templates/report_2025_deepfake.html
+++ b/templates/report_2025_deepfake.html
@@ -1200,6 +1200,7 @@
       <div class="nav-dropdown-menu">
         <a href="/reports/2025-deepfake-report">2025 Deepfake Report</a>
         <a href="/reports/vendor-intelligence-report">Vendor Intelligence Report</a>
+        <a href="/reports/shadowstack-infrastructure-report">ShadowStack Infrastructure Report</a>
       </div>
     </div>
     <a href="/shadowstack">ShadowStack</a>
