--- a/templates/darkai_home.html
+++ b/templates/darkai_home.html
@@ -580,7 +580,7 @@
       <div class="nav-dropdown-menu">
         <a href="/reports/2025-deepfake-report">2025 Deepfake Report</a>
         <a href="/reports/vendor-intelligence-report">Vendor Intelligence Report</a>
-        <a href="/reports/shadowstack-infrastructure-report">ShadowStack Infrastructure Report</a>
+        <a href="/reports/shadowstack-infrastructure-report">DeepFake Infrastructure Report</a>
       </div>
     </div>
     <a href="/humangate">HumanGate</a>
